# gs_scrape

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/gs_scrape/: __init__.py  gs_scrape.py  vignette.ipynb
tests/: test_gs_scrape.py
