[tool.poetry]
name = "gs_scrape"
version = "0.1.0"
description = "Extract Google Scholar search results"
authors = ["Baek Park"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
lxml = "^4.9.1"
pandas = "^1.5.1"
bs4 = "^0.0.1"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
